--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": ["src/appswitcher.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
