service worker added using the ' ng add @angular/pwa' command

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "~8.2.13",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
+    "@angular/pwa": "^0.803.21",
     "@angular/router": "~8.2.13",
+    "@angular/service-worker": "~8.2.13",
     "@fortawesome/angular-fontawesome": "^0.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
